Update existing implementations to use the new caching task system